--- a/src/Blazor.Server.UI/Pages/Pilots/Pilots.razor
+++ b/src/Blazor.Server.UI/Pages/Pilots/Pilots.razor
@@ -247,7 +247,7 @@
     [CascadingParameter]
     private Task<AuthenticationState> AuthState { get; set; } = default!;
     [Inject]
-    private IPilotService PilotService{ get; set; }
+    private IPilotService PilotService { get; set; } = null!;
 
     private PilotsWithPaginationQuery Query { get; set; } = new();
     [Inject]
