--- a/src/Blazor.Server.UI/Pages/_Layout.cshtml
+++ b/src/Blazor.Server.UI/Pages/_Layout.cshtml
@@ -106,7 +106,7 @@
     <script src="https://cdn.jsdelivr.net/npm/d3-org-chart@3.0.1-next.1"></script>
     <script src="https://cdn.jsdelivr.net/npm/d3-flextree@2.1.2/build/d3-flextree.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
-
+    <script src="/_content/Html5QrcodeBlazor.Wrapper/html5-qrcode.min.js"></script>
     <script type="text/javascript">
 
         async function externalLogin(provider, dotNetHelper) {
