--- a/src/Blazor.Server.UI/Pages/Authentication/Login.razor
+++ b/src/Blazor.Server.UI/Pages/Authentication/Login.razor
@@ -64,16 +64,7 @@
                 }
 
             </MudButton>
-            <div class="d-flex justify-space-around flex-grow-1 my-4 gap-4">
-                <MudButton Class="flex-grow-1" OnClick="@(() => SignInExternal("Microsoft"))" Variant="Variant.Filled" StartIcon="@Icons.Custom.Brands.Microsoft" ButtonType="ButtonType.Button"
-                           title="Sign in with Microsoft">
-                    @ConstantString.Microsoft
-                </MudButton>
-                <MudButton Class="flex-grow-1" OnClick="@(() => SignInExternal("Google"))" Variant="Variant.Filled" StartIcon="@Icons.Custom.Brands.Google" ButtonType="ButtonType.Button"
-                           title="Sign in with Google">
-                    @ConstantString.Google
-                </MudButton>
-            </div>
+             
         </MudForm>
     </NotAuthorized>
     <Authorized>
@@ -151,17 +142,11 @@
                         }
                         else
                         {
-                            var tokenresponse = await _identityService.LoginAsync(new TokenRequest() { UserName=_model.UserName,Password=_model.Password, RememberMe = _model.RememberMe });
-                            if (tokenresponse.Succeeded && tokenresponse.Data is not null)
-                            {
-                                await TokenProvider.SaveToken(tokenresponse.Data);
+                           
+                                await TokenProvider.Login(user);
                                 NavigationManager.NavigateTo(NavigationManager.Uri, true);
                                 Logger.LogInformation("{@UserName:l} has successfully logged in", user.UserName);
-                            }
-                            else
-                            {
-                                Snackbar.Add(tokenresponse.ErrorMessage, Severity.Error);
-                            }
+                          
                             
                         }
                     }
@@ -209,7 +194,7 @@
     public async Task ConfirmExternal(string provider, string userName, string name, string accessToken)
     {
         var user = await CreateUserWithExternalProvider(provider, userName, name, accessToken);
-        await TokenProvider.GenerateJwt(user);
+        await TokenProvider.Login(user);
         NavigationManager.NavigateTo(NavigationManager.Uri, true);
         Logger.LogInformation("{@UserName:l} has successfully logged in", userName);
     }
