--- a/src/Blazor.Server.UI/Pages/Buses/Buses.razor
+++ b/src/Blazor.Server.UI/Pages/Buses/Buses.razor
@@ -36,7 +36,7 @@
     <ToolBarContent>
         <div class="d-flex align-start flex-grow-1">
             <div class="d-flex gap-4">
-                <MudIcon Icon="@Icons.Material.Filled.Window" Size="Size.Large" />
+                <MudIcon Icon="@Icons.Material.Filled.DirectionsBus" Size="Size.Large" />
                 <div class="d-flex flex-column">
                     <MudText Typo="Typo.caption">@Title</MudText>
                     <MudEnumSelect Style="min-width:120px" TEnum="BusListView" ValueChanged="OnChangedListView" Value="Query.ListView" Dense="true" Label="List View">
