--- a/src/Blazor.Server.UI/Pages/Pilots/DeviceScanComponent.razor
+++ b/src/Blazor.Server.UI/Pages/Pilots/DeviceScanComponent.razor
@@ -1,7 +1,17 @@
 ﻿@using CleanArchitecture.Blazor.Application.Features.Itineraries.DTOs;
+@using CleanArchitecture.Blazor.Application.Features.Students.Queries.GetById;
+@using CleanArchitecture.Blazor.Application.Features.Students.Specifications;
+@using CleanArchitecture.Blazor.Application.Features.TransportLogs.Commands.Create;
+@using CleanArchitecture.Blazor.Application.Features.TransportLogs.DTOs;
+@using CleanArchitecture.Blazor.Application.Features.TransportLogs.Queries.GetAll;
+@using CleanArchitecture.Blazor.Application.Services;
 @using Html5QrcodeBlazor.Wrapper;
+@using System.Text.Json;
+@using System.Text.Json.Serialization;
 @implements IAsyncDisposable
 @inject Html5QrcodeReader cameraBarcodeReader
+@inject IGeolocationService geolocation
+@inject IGeoAddressService addressService
 <style>
 
     #reader {
@@ -16,13 +26,11 @@
             width: 285px;
         }
 
-            widget[type=ticket] .top > div,
-            widget[type=ticket] .bottom > div {
+            widget[type=ticket] .top > div {
                 padding: 0 18px;
             }
 
-                widget[type=ticket] .top > div:first-child,
-                widget[type=ticket] .bottom > div:first-child {
+                widget[type=ticket] .top > div:first-child {
                     padding-top: 18px;
                 }
 
@@ -31,8 +39,8 @@
                     padding-bottom: 18px;
                 }
 
-            widget[type=ticket] .top img,
-            widget[type=ticket] .bottom img {
+            widget[type=ticket] .top img
+         {
                 padding: 18px 0;
             }
 
@@ -54,7 +62,7 @@
             widget[type=ticket] .bottom {
                 border-bottom-right-radius: 5px;
                 border-bottom-left-radius: 5px;
-                padding: 18px;
+                padding: 12px;
             }
 
                 widget[type=ticket] .bottom .barcode {
@@ -120,13 +128,13 @@
             <div class="top d-flex flex-column">
                 <div class="d-flex flex-row justify-space-between">
                     <div class="d-flex flex-column">
-                        <div class="bandname -bold">Starting Station</div>
-                        <div class="tourname align-self-center">7: 30</div>
+                        <div class="bandname -bold">@Itinerary.StartingStation</div>
+                        <div class="tourname align-self-center">@Itinerary.FirstTime</div>
                     </div>
-                    <h1> - </h1>
+                    <MudIcon Icon="@Icons.Material.Filled.MultipleStop" Class="align-self-center"></MudIcon>
                     <div class="d-flex flex-column">
-                        <div class="bandname -bold">Terminal Station</div>
-                        <div class="tourname align-self-center">9: 30</div>
+                        <div class="bandname -bold">@Itinerary.TerminalStation</div>
+                        <div class="tourname align-self-center">@Itinerary.LastTime</div>
                     </div>
                 </div>
                 @if (cameraBarcodeReader is not null)
@@ -142,30 +150,57 @@
                 @* <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/199011/concert.png" alt="" /> *@
                 <div class="deetz d-flex flex-row justify-space-between">
                     <div class="event flex-column">
-                        <div class="date">@DateTime.Now.ToLongDateString()</div>
-                        <div class="location -bold">Bloomington, Indiana</div>
+                        <div class="date">@Now.ToLongDateString()</div>
+                        @if (_isLoading)
+                        {
+                            <MudSkeleton Animation="Animation.Wave" Width="95px" />
+                        }
+                        else
+                        {
+                            <div class="location -bold">@Location</div>
+
+                        }
+
                     </div>
                     <div class="price d-flex flex-column">
                         <div class="label">On Board</div>
-                        <div class="cost -bold align-self-center">10</div>
+                        <div class="cost -bold align-self-center">@_transportLogs?.Count()</div>
                     </div>
                 </div>
             </div>
-            <div class="rip"></div>
-            <div class="bottom d-flex flex-row justify-space-between">
-                <div class="code">@foundBarcode</div>
-                <a class="buy" href="#">Checkout</a>
-            </div>
-            <div class="rip"></div>
-            <div class="bottom d-flex flex-row justify-space-between">
-                <div class="barcode"></div>
-                <a class="buy" href="#">Checkout</a>
-            </div>
-            <div class="rip"></div>
-            <div class="bottom d-flex flex-row justify-space-between">
-                <div class="barcode"></div>
-                <a class="buy" href="#">Checkout</a>
-            </div>
+            @if (_transportLogs is not null)
+            {
+                @foreach (var item in _transportLogs)
+                {
+                    <div class="rip"></div>
+                    <div class="bottom d-flex flex-row justify-space-between">
+                        <div class="d-flex flex-row flex-grow-1 align-center pl-3">
+                            <MudAvatar>
+                                <MudImage Src="@item.Student.ProfilePicture"></MudImage>
+                            </MudAvatar>
+                            <div class="d-flex flex-column ml-3">
+                                <p>@item.Student.UID</p>
+                                <p>@item.Student.DisplayName</p>
+                            </div>
+                           
+                        </div>
+                        <MudIconButton Icon="@Icons.Material.Filled.Logout"></MudIconButton>
+                    </div>
+                }
+            }
+            else
+            {
+                <div class="rip"></div>
+                <div class="bottom d-flex flex-row justify-space-between">
+                    <div class="d-fle flex-row">
+                        <MudSkeleton Class="my-5" SkeletonType="SkeletonType.Circle" Width="40px" Height="40px" />
+                    </div>
+                    <MudSkeleton Class="my-5" SkeletonType="SkeletonType.Rectangle" Width="50px" Height="50px" />
+                </div>
+            }
+           
+            
+           
         </widget>
     </div>
 </div>
@@ -173,6 +208,31 @@
     [Parameter]
     [EditorRequired]
     public ItineraryDto Itinerary { get; set; } = null!;
+    [Parameter]
+    public UserProfile UserProfile { get; set; } = null!;
+    private DateTime Now = DateTime.Now;
+    private string? Location;
+    [Inject]
+    private IMediator Mediator { get; set; } = default!;
+    private IEnumerable<TransportLogDto>? _transportLogs { get; set; } = null;
+
+    private Queue<string> studentQ = new Queue<string>();
+    readonly JsonSerializerOptions _opts = new()
+        {
+            WriteIndented = true,
+            PropertyNamingPolicy = JsonNamingPolicy.CamelCase,
+            DefaultIgnoreCondition = JsonIgnoreCondition.WhenWritingNull
+        };
+    readonly PositionOptions _options = new()
+        {
+            EnableHighAccuracy = true,
+            MaximumAge = null,
+            Timeout = 15_000
+        };
+    protected override async Task OnInitializedAsync()
+    {
+        await  LoadOnBoardStudents();
+    }
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (firstRender)
@@ -180,10 +240,24 @@
             cameraBarcodeReader.OnBarcodeScan += HandleBarcodeScanDebounced;
             await cameraBarcodeReader.Render();
             await InvokeAsync(StateHasChanged);
+            _watchId = await geolocation.WatchPositionAsync(
+            component: this,
+            onSuccessCallbackMethodName: nameof(OnPositionRecieved),
+            onErrorCallbackMethodName: nameof(OnPositionError),
+            options: _options);
         }
+    }
+    private async Task LoadOnBoardStudents()
+    {
+        _transportLogs = await Mediator.Send(new GetOnBoardTransportLogsQuery() { ItineraryId = Itinerary.Id });
+
     }
     bool processingScan;
     string foundBarcode;
+    double _watchId;
+    bool _isLoading = true;
+    GeolocationPositionError? _positionError;
+    GeolocationPosition? _position;
     public async void HandleBarcodeScanDebounced(string barcode)
     {
         if (processingScan)
@@ -196,12 +270,64 @@
     public async Task HandleBarcodeScan(string barcode)
     {
         foundBarcode = barcode.Trim();
-        Snackbar.Add($"{foundBarcode}", MudBlazor.Severity.Info);
-        await InvokeAsync(StateHasChanged);
+        if (!studentQ.Contains(foundBarcode) && !(_transportLogs?.Any(x => x.Student.UID == foundBarcode)??false))
+        {
+            var item = await Mediator.Send(new GetStudentByUIdQuery(foundBarcode));
+            if (item is not null)
+            {
+                studentQ.Enqueue(foundBarcode);
+                var result = await Mediator.Send(new CreateTransportLogCommand()
+                    {
+                        DeviceId = Itinerary.Bus.DeviceId,
+                        Latitude = _position?.Coords.Latitude,
+                        Longitude = _position?.Coords.Longitude,
+                        Location = Location,
+                        ItineraryId = Itinerary.Id,
+                        StudentId = item.Id,
+                        TenantId = Itinerary.TenantId,
+                        UpOrDown = "Up",
+                        SwipeDateTime = DateTime.Now,
+                    });
+                if (result.Succeeded)
+                {
+                    await LoadOnBoardStudents();
+                    Snackbar.Add($"{item.DisplayName} checkin successfully.", MudBlazor.Severity.Success);
+                }
+                else
+                {
+                    Snackbar.Add($"checkin error.{result.ErrorMessage}", MudBlazor.Severity.Error);
+                    
+                }
+            }
+            else
+            {
+                Snackbar.Add($"{foundBarcode} checkin error.", MudBlazor.Severity.Error);
+            }
+
+            await InvokeAsync(StateHasChanged);
+        }
+
     }
     public async ValueTask DisposeAsync()
     {
         cameraBarcodeReader.OnBarcodeScan -= HandleBarcodeScanDebounced;
         await cameraBarcodeReader.Stop();
+        await geolocation.ClearWatchAsync(_watchId);
+    }
+    [JSInvokable]
+    public async void OnPositionRecieved(GeolocationPosition position)
+    {
+        _isLoading = false;
+        _position = position;
+        Location = await addressService.GetAddress(position.Coords.Latitude, position.Coords.Longitude);
+        StateHasChanged();
+    }
+
+    [JSInvokable]
+    public void OnPositionError(GeolocationPositionError positionError)
+    {
+        _isLoading = false;
+        _positionError = positionError;
+        StateHasChanged();
     }
 }
