--- a/src/Blazor.Server.UI/Pages/Pilots/Scanner.razor
+++ b/src/Blazor.Server.UI/Pages/Pilots/Scanner.razor
@@ -2,12 +2,12 @@
 @using CleanArchitecture.Blazor.Application.Features.Itineraries.DTOs;
 @using CleanArchitecture.Blazor.Application.Features.Itineraries.Queries.GetAll;
 @inherits FluxorComponent
-<div class="d-flex flex-nowrap gap-4 pa-6 justify-center" style="margin:auto; min-width: 400px; overflow-y: scroll">
+<div class="d-flex flex-nowrap gap-4 pa-8 justify-center" style="margin:auto; min-width: 400px; overflow-y: scroll">
     @if (_itineraries is not null)
     {
         @foreach (var item in _itineraries)
         {
-            <TravelCard Itinerary="@item"></TravelCard>
+            <TravelCard Itinerary="@item" Active=@(item == _itinerary) SetItinerary="SetItinerary"></TravelCard>
         }
 
     }
@@ -19,9 +19,9 @@
     
 </div>
 <div class="my-4"></div>
-@if (Itinerary is not null)
+@if (_itinerary is not null)
 {
-    <DeviceScanComponent Itinerary="@Itinerary"></DeviceScanComponent>
+    <DeviceScanComponent Itinerary="@_itinerary" UserProfile="@UserProfile"></DeviceScanComponent>
 }
 else
 {
@@ -34,16 +34,18 @@ else
     private IState<UserProfileState> UserProfileState { get; set; } = null!;
     private UserProfile UserProfile => UserProfileState.Value.UserProfile;
     private IEnumerable<ItineraryDto>? _itineraries { get; set; } = null;
-    private ItineraryDto? Itinerary { get; set; } = null!;
+    private ItineraryDto? _itinerary { get; set; } = null!;
     [Inject]
     private IMediator Mediator { get; set; } = default!;
     protected override async Task OnInitializedAsync()
     {
 
-
         var result = await Mediator.Send(new GetItinerariesByPilotQuery() { UserProfile = UserProfile });
-
         _itineraries = result;
+        _itinerary = _itineraries.FirstOrDefault();
     }
-
+    void SetItinerary(ItineraryDto item)
+    {
+        _itinerary = item;
+    }
 }
