--- a/src/Blazor.Server.UI/Pages/Schools/Schools.razor
+++ b/src/Blazor.Server.UI/Pages/Schools/Schools.razor
@@ -187,7 +187,7 @@
             <CellTemplate>
                 <div class="d-flex flex-column">
                     <MudText Typo="Typo.body2">@context.Item.Name</MudText>
-                    <MudText Typo="Typo.body2">@context.Item.Address</MudText>
+                    <MudText Typo="Typo.body2" Style="color:#99a0b0">@context.Item.Address</MudText>
                 </div>
             </CellTemplate>
         </PropertyColumn>
