--- a/src/Blazor.Server.UI/Pages/Pilots/TravelCard.razor
+++ b/src/Blazor.Server.UI/Pages/Pilots/TravelCard.razor
@@ -1,7 +1,7 @@
 ﻿@using CleanArchitecture.Blazor.Application.Features.Itineraries.DTOs;
 
 <style>
-    .rip {
+    .point {
         height: 15px;
         margin: 0 10px;
         background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAACCAYAAAB7Xa1eAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAAYdEVYdFNvZnR3YXJlAHBhaW50Lm5ldCA0LjAuOWwzfk4AAAAaSURBVBhXY5g7f97/2XPn/AcCBmSMQ+I/AwB2eyNBlrqzUQAAAABJRU5ErkJggg==);
@@ -9,7 +9,6 @@
         background-repeat: repeat-x;
         background-position: center;
         position: relative;
-        box-shadow: 0 1px 0 0 #fff, 0 -1px 0 0 #fff;
     }
 </style>
 <MudCard Square="false" Outlined="@(!Active)" Elevation="@Elevation" Style="min-width:365px;width:365px;height:150px">
@@ -35,7 +34,7 @@
             </div>
             <div class="d-flex flex-column">
                 <h4 class="mb-0" style="margin-bottom:-5px">@Itinerary.Bus.PlatNumber</h4>
-                <div class="rip"></div>
+                <div class="point"></div>
             </div>
             <div class="d-flex flex-column gap-1">
                 <p>@Itinerary.TerminalStation</p>
