--- a/src/Blazor.Server.UI/Pages/TransportLogs/TransportLogs.razor
+++ b/src/Blazor.Server.UI/Pages/TransportLogs/TransportLogs.razor
@@ -150,7 +150,7 @@
                     }
                 </MudAvatar>
                 <div class="ml-2">
-                    <MudText Typo="Typo.body2">@context.Item.Student.UID</MudText>
+                    <MudText Typo="Typo.body2" Style="color:var(--mud-palette-text-secondary) !important">@context.Item.Student.UID</MudText>
                     <MudText Typo="Typo.body2">@context.Item.Student.DisplayName</MudText>
                 </div>
             </CellTemplate>
@@ -171,7 +171,7 @@
                 <CellTemplate>
                     <div class="d-flex flex-column">
                         <MudText Typo="Typo.body2">@context.Item.Tenant.Name</MudText>
-                        <MudText Typo="Typo.body2">@context.Item.TenantId</MudText>
+                        <MudText Typo="Typo.body2" Style="color:var(--mud-palette-text-secondary) !important">@context.Item.TenantId</MudText>
                     </div>
                 </CellTemplate>
             </PropertyColumn>
